service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-1
spec:
  selector:
    app: nginx-app-1
  ports:
  - port: 80
    targetPort: 80
