service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-2
spec:
  selector:
    app: nginx-app-2
  ports:
  - port: 80
    targetPort: 80
